<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/row_height_small"
        android:background="@null"
        android:gravity="left|center_vertical"
        android:hint="@string/tabbed_reg_phone_hint"
        android:singleLine="true"
        android:padding="0dp"
        android:textSize="@dimen/font_medium"/>

    <include layout="@layout/row_divider"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/row_height_small"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/password"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/row_height_small"
            android:layout_weight="1.0"
            android:background="@null"
            android:gravity="left|center_vertical"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="0.0dip"
            android:singleLine="true"
            android:textSize="@dimen/font_medium"/>

        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/row_height_small"
            android:layout_marginLeft="@dimen/row_padding"
            android:layout_marginRight="@dimen/row_padding"
            android:scaleType="center"
            android:src="@drawable/search_clear"
            android:visibility="gone"/>

        <View
            android:id="@+id/clear_divider"
            android:layout_width="1.0px"
            android:layout_height="fill_parent"
            android:layout_marginBottom="12.0dip"
            android:layout_marginTop="12.0dip"
            android:background="@color/grey_2"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/row_padding">

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/forgot"
                android:textColor="@color/accent_blue_medium"/>

            <ImageView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/row_height_small"
                android:layout_gravity="right"
                android:src="@drawable/nav_arrow_next"/>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="32.0dip"
                android:layout_height="32.0dip"
                android:layout_gravity="center|right"
                android:indeterminate="true"/>
        </FrameLayout>
    </LinearLayout>

    <include layout="@layout/row_divider"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"/>
</LinearLayout>